--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -4,5 +4,7 @@
     "NAVBAR_EDUCATION": "Education",
     "NAVBAR_SKILLS": "Skills",
     "NAVBAR_PROJECTS": "Projects",
-    "NAVBAR_CONTACT": "Contact"
+    "NAVBAR_CONTACT": "Contact",
+    "HEADER_ROLE": "Interior Architect",
+    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision."
 }
