--- a/src/translation/tr.json
+++ b/src/translation/tr.json
@@ -4,5 +4,7 @@
     "NAVBAR_EDUCATION": "Eğitim",
     "NAVBAR_SKILLS": "Yetenekler",
     "NAVBAR_PROJECTS": "Projeler",
-    "NAVBAR_CONTACT": "İletişim"
+    "NAVBAR_CONTACT": "İletişim",
+    "HEADER_ROLE": "İç Mimar",
+    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision."
 }
