--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -5,6 +5,12 @@
     "NAVBAR_SKILLS": "Skills",
     "NAVBAR_PROJECTS": "Projects",
     "NAVBAR_CONTACT": "Contact",
+    "NAVBAR_DOWNLOAD_CV": "Download CV",
+    "NAVBAR_DOWNLOAD_PORTFOLIO": "Download Portfolio",
     "HEADER_ROLE": "Interior Architect",
-    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision."
+    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision.",
+    "ABOUT_DESCIPTION1": "As an interior architect, I am passionate about creating functional and aesthetically pleasing spaces that reflect the personalities and needs of my clients. With a strong background in design and project management, I have the skills and experience to bring any vision to life.",
+    "ABOUT_DESCIPTION2": "Whether it's a residential project, a commercial space, or a full-scale renovation, I am dedicated to delivering exceptional results and unparalleled service. I take the time to really listen to my clients and understand their unique needs, ensuring that the final result is a space that they will love and enjoy for years to come.",
+    "ABOUT_DESCIPTION3": "I am constantly seeking out new ideas and inspiration, and I stay up-to-date on the latest trends and technologies in the field. I am committed to delivering the highest quality work and exceeding my clients' expectations at every stage of the process.",
+    "ABOUT_DESCIPTION4": "If you're in need of an interior architect who is creative, detail-oriented, and dedicated to delivering exceptional results, I would love to work with you. Let's create a space that you'll love!"
 }
