--- a/src/translation/tr.json
+++ b/src/translation/tr.json
@@ -5,6 +5,12 @@
     "NAVBAR_SKILLS": "Yetenekler",
     "NAVBAR_PROJECTS": "Projeler",
     "NAVBAR_CONTACT": "İletişim",
+    "NAVBAR_DOWNLOAD_CV": "CV İndir",
+    "NAVBAR_DOWNLOAD_PORTFOLIO": "Portfolio İndir",
     "HEADER_ROLE": "İç Mimar",
-    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision."
+    "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision.",
+    "ABOUT_DESCIPTION1": "İç mimar olarak, müşterilerimin kişiliklerini ve ihtiyaçlarını yansıtan, fonksiyonel ve estetik olarak hoş mekanlar yaratmaya tutkuyla bağlıyım. Tasarım ve proje yönetimi alanında güçlü bir geçmişe sahip olmam sayesinde, herhangi bir vizyonu hayata geçirme becerisine sahibim.",
+    "ABOUT_DESCIPTION2": "Konut projesi, ticari bir alan ya da tam ölçekli bir yenileme projesi olsun, mükemmel sonuçlar ve eşsiz hizmet sunmaya odaklanırım. Müşterilerime gerçekten dinlemek ve onların özel ihtiyaçlarını anlamak için zaman ayırırım, böylece sonuç olarak sevdikleri ve yıllar boyunca keyif aldıkları bir mekan olur.",
+    "ABOUT_DESCIPTION3": "Sürekli olarak yeni fikirler ve ilham ararım ve alanın en son trendleri ve teknolojilerine güncel kalırım. Süreç boyunca müşterilerimin beklentilerini aşan en yüksek kaliteli işi sunmayı taahhüt ediyorum.",
+    "ABOUT_DESCIPTION4": "Eğer yaratıcı, ayrıntıya önem veren ve mükemmel sonuçlar sunmaya adanmış bir iç mimara ihtiyacınız varsa, sizinle çalışmayı çok isterim."
 }
