--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -5,8 +5,8 @@
     "NAVBAR_SKILLS": "Skills",
     "NAVBAR_PROJECTS": "Projects",
     "NAVBAR_CONTACT": "Contact",
-    "NAVBAR_DOWNLOAD_CV": "Download CV",
-    "NAVBAR_DOWNLOAD_PORTFOLIO": "Download Portfolio",
+    "NAVBAR_DOWNLOAD_CV": "CV",
+    "NAVBAR_DOWNLOAD_PORTFOLIO": "Portfolio",
     "HEADER_ROLE": "Interior Architect",
     "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision.",
     "ABOUT_DESCIPTION1": "As an interior architect, I am passionate about creating functional and aesthetically pleasing spaces that reflect the personalities and needs of my clients. With a strong background in design and project management, I have the skills and experience to bring any vision to life.",
