--- a/src/translation/tr.json
+++ b/src/translation/tr.json
@@ -5,8 +5,8 @@
     "NAVBAR_SKILLS": "Yetenekler",
     "NAVBAR_PROJECTS": "Projeler",
     "NAVBAR_CONTACT": "İletişim",
-    "NAVBAR_DOWNLOAD_CV": "CV İndir",
-    "NAVBAR_DOWNLOAD_PORTFOLIO": "Portfolio İndir",
+    "NAVBAR_DOWNLOAD_CV": "CV",
+    "NAVBAR_DOWNLOAD_PORTFOLIO": "Portfolio",
     "HEADER_ROLE": "İç Mimar",
     "HEADER_DESCIPTION": "Bringing your vision to life with creativity and precision.",
     "ABOUT_DESCIPTION1": "İç mimar olarak, müşterilerimin kişiliklerini ve ihtiyaçlarını yansıtan, fonksiyonel ve estetik olarak hoş mekanlar yaratmaya tutkuyla bağlıyım. Tasarım ve proje yönetimi alanında güçlü bir geçmişe sahip olmam sayesinde, herhangi bir vizyonu hayata geçirme becerisine sahibim.",
